--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "apollo-boost": "^0.4.3",
     "graphql": "^14.4.2",
     "intersection-observer": "^0.7.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "styled-components": "^4.3.2"
   },
