--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "standard": "^13.1.0",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-pwa-manifest": "^4.0.0",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
     "apollo-boost": "^0.4.3",
     "graphql": "^14.4.2",
     "intersection-observer": "^0.7.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
